--- a/Nueva carpeta/gatitasolitaria.html
+++ b/Nueva carpeta/gatitasolitaria.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="amoooor" content="width=, initial-scale=1.0">
     <title>gatita</title>
-</head>
+</head> 
+   < h1 style=font-style:italic;">titulo</h1>
 
 <body>
-    <p style="background-color: purple;color:black ;">gatitas moorrr x siempre unidas </p>
+    <p style="background-color: purple;color:black ;"> GATITAS UNIDAS POR SIEMPRE </p>
     <p></p>
 
  <img src="./gato.png" alt="">
    <iframe width="853" height="480" src="https://www.youtube.com/embed/2A2IgFQpDVg" title="Gatos jugando jugando con sus amigos con globos" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   
-</body>
+</body> 
+
 </html>
