--- a/Nueva carpeta/gatitasolitaria.html
+++ b/Nueva carpeta/gatitasolitaria.html
@@ -6,7 +6,7 @@
     <title>gatita</title>
 </head> 
    < h1 style=font-style:italic;">titulo</h1>
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 <body>
     <p style="background-color: purple;color:black ;"> GATITAS UNIDAS POR SIEMPRE </p>
     <p></p>
@@ -17,3 +17,4 @@
 </body> 
 
 </html>
+
