--- a/Nueva carpeta/gatitasolitaria.html
+++ b/Nueva carpeta/gatitasolitaria.html
@@ -5,7 +5,7 @@
     <meta name="amoooor" content="width=, initial-scale=1.0">
     <title>gatita</title>
 </head> 
-   < h1 style=font-style:italic;">titulo</h1>
+   < h1 style=font-style:italic;">lola</h1>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 <body>
     <p style="background-color: purple;color:black ;"> GATITAS </p>
@@ -17,5 +17,6 @@
 </body> 
 
 </html>
+
 
 
