--- a/LALI/gatitasolitaria.html
+++ b/LALI/gatitasolitaria.html
@@ -20,8 +20,8 @@
     
     <p></p>
 
- <img src="colorear gatito.jpg" alt="gatito"><br>
-   
+ <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fes.magicoloriage.com%2Fpersonajes-y-deportes%2Fdel-bebe%2Fcolorear-de-gato-beb%25C3%25A9-con-un-biber%25C3%25B3n%2F&psig=AOvVaw1aI1zd1TwUsfoEKRUiW2fl&ust=1758663027115000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCIjjr76o7Y8DFQAAAAAdAAAAABAE" alt="gatito"><br>
   
 </body>
 </html>
+
